fix: text align centre

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -678,7 +678,6 @@ canvas
     width: 200px
     li
       padding: 5px
-      text-align: left
       list-style-type: none
 
 // Update this in bohemia //
